--- a/CapProjectOne.ipynb
+++ b/CapProjectOne.ipynb
@@ -62,10 +62,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Obtain Dataframe with data regarding winning percenatge by year for teams that qualified for all world cups since 2002"
+    "Obtained Dataframe with data regarding winning percentage by year for teams that qualified for all world cups since 2002"
    ]
   },
   {
@@ -303,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create dataframe with overall winning and tie percentage of each team"
+    "Created a dataframe with overall winning and tie percentage of each team."
    ]
   },
   {
@@ -411,7 +411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a dataframe in which for every unique matchup combination of two teams, find winning and tie percentage of both teams"
+    "Created a dataframe in which for every unique matchup combination of two teams, obtained winning and tie percentage of both teams."
    ]
   },
   {
@@ -1161,7 +1161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a new base dataframe indexed by all the matches.Every match is a sample. Join the previous dataframes into new base dataframe. "
+    "Created a new base dataframe indexed by all the matches.Every match is a sample. Joined the previous dataframes into new base dataframe. For each match/sample, the features are overall winning percentage for team0 and team1, overall tie percentage for team0 and team1, win percentage for team0 and team1 vs one another, tie percentage of team0 and team 1 vs one another. Total features so far is 7."
    ]
   },
   {
@@ -3138,7 +3138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Recency effect; Find win and tie percentage for all teams in just last two world cups, and merge new columns into base dataframe. For teams that didnt play in the last 2 world cups, use data from first two world cups. "
+    "Recency effect; Found win and tie percentage for all teams in just last two world cups, and merged new columns into base dataframe. For teams that didnt play in the last 2 world cups, used data from first two world cups. This adds 4 new features. The win percentage of last 2 world cups for team0 and team1, and tie percentage in last 2 world cups for team0 and team1. "
    ]
   },
   {
@@ -6234,7 +6234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define training(x) and test(y) data"
+    "Defined training(x) and test(y) data."
    ]
   },
   {
@@ -9555,7 +9555,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Created instance of RandomForestClassifier. Train,Predict,obtained classification report and cross-val scores. Manually tested max_depth and estimators until highest accuracy was achieved."
+    "Created instance of RandomForestClassifier. Trained,Predicted,obtained classification report and cross-val scores. Manually tested max_depth and estimators until highest accuracy was achieved."
    ]
   },
   {
@@ -9659,7 +9659,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Created instance of SGDClassifier. Train,Predict,obtained classification report and cross val scores. Manually tested hyperparameters of alpha and l1_ratio however there was no difference from defaults of 0.0001 and .15 respectively."
+    "Created instance of SGDClassifier. Trained, Predicted, and obtained classification report and cross-val scores. Manually test hyperparameters of alpha and l1_ratio however there was no difference from defaults of 0.0001 and .15 respectively."
    ]
   },
   {
@@ -9763,7 +9763,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Created instance of XGBClassifier. Train,Predict,and obtain classification report. Manually tested max_depth, estimators, and learning rate until highest accuracy was achieved."
+    "Created instance of XGBClassifier. Trained, Predicted, obtained classification report and cross-val scores. Manually test max_depth, estimators, and learning rate until highest accuracy was achieved."
    ]
   },
   {
@@ -9891,7 +9891,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assign weights to the predicted probabilities of all the classifiers until achieve best result."
+    "Assign weights to the predicted probabilities of all the classifiers until the best result is achieved. Combine y_test with ensemble predicted probabilities into one dataframe."
    ]
   },
   {
