--- a/CapProjectOne.ipynb
+++ b/CapProjectOne.ipynb
@@ -9754,7 +9754,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Created instance of Logistic Regression Classifier. Trained and Predicted on it. Manually test hyperparameters of alpha and l1_ratio however there was no difference from defaults of 0.0001 and .15 respectively."
+    "Created instance of Logistic Regression Classifier. Trained and Predicted on it. Tested manually and determined default C of 1.0 gives best results. Used saga optimization algorithm."
    ]
   },
   {
