--- a/Capstone Project Two/Scratch_CNN_Final_Model.ipynb
+++ b/Capstone Project Two/Scratch_CNN_Final_Model.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import warnings\n",
@@ -31,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,25 +62,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_labels = '/Users/asifbala/Desktop/humpback-whale-identification.zip Folder/train.csv'\n",
+    "train_df = pd.read_csv(train_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(25361, 2)\n",
+      "(25361, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "           Image         Id\n",
       "0  0000e88ab.jpg  w_f48451c\n",
       "1  0001f9222.jpg  w_c3d896a\n",
       "2  00029d126.jpg  w_20df2c5\n",
       "3  00050a15a.jpg  new_whale\n",
-      "4  0005c1ef8.jpg  new_whale\n",
+      "4  0005c1ef8.jpg  new_whale\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "                Image         Id\n",
       "count           25361      25361\n",
       "unique          25361       5005\n",
-      "top     d07cec605.jpg  new_whale\n",
-      "freq                1       9664\n",
+      "top     949b3207c.jpg  new_whale\n",
+      "freq                1       9664\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 25361 entries, 0 to 25360\n",
       "Data columns (total 2 columns):\n",
@@ -80,7 +146,23 @@
       "Id       25361 non-null object\n",
       "dtypes: object(2)\n",
       "memory usage: 396.3+ KB\n",
-      "None\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "new_whale    9664\n",
       "w_23a388d      73\n",
       "w_9b5109b      65\n",
@@ -95,11 +177,11 @@
       "w_d405854      47\n",
       "w_f0fe284      45\n",
       "w_789c969      45\n",
-      "w_343f088      40\n",
       "w_5e8e218      40\n",
+      "w_343f088      40\n",
       "w_778e474      40\n",
-      "w_60ce6fc      37\n",
       "w_a9304b9      37\n",
+      "w_60ce6fc      37\n",
       "w_5a2634c      37\n",
       "Name: Id, dtype: int64\n",
       "False    2932\n",
@@ -109,15 +191,9 @@
     }
    ],
    "source": [
-    "train_labels = '/Users/asifbala/Desktop/humpback-whale-identification.zip Folder/train.csv'\n",
-    "train_df = pd.read_csv(train_labels)\n",
-    "print(train_df.shape)\n",
-    "print(train_df.head())\n",
-    "print(train_df.describe())\n",
-    "print(train_df.info())\n",
     "print(train_df['Id'].value_counts().head(20))\n",
-    "ringer = train_df['Id'].value_counts() == 1\n",
-    "print(ringer.value_counts())"
+    "class_with_count_1 = train_df['Id'].value_counts() == 1\n",
+    "print(class_with_count_1.value_counts())"
    ]
   },
   {
@@ -136,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,26 +221,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6300, 2)\n",
-      "(6300, 2)\n",
+      "(6300, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "           Image         Id\n",
       "0  0000e88ab.jpg  w_f48451c\n",
       "1  0001f9222.jpg  w_c3d896a\n",
       "2  00029d126.jpg  w_20df2c5\n",
       "3  00050a15a.jpg  new_whale\n",
-      "4  0005c1ef8.jpg  new_whale\n",
+      "4  0005c1ef8.jpg  new_whale\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "                Image         Id\n",
       "count            6300       6300\n",
       "unique           6300       2282\n",
-      "top     10dd1a607.jpg  new_whale\n",
-      "freq                1       2448\n",
+      "top     10e53271e.jpg  new_whale\n",
+      "freq                1       2448\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 6300 entries, 0 to 6299\n",
       "Data columns (total 2 columns):\n",
@@ -172,28 +295,60 @@
       "Id       6300 non-null object\n",
       "dtypes: object(2)\n",
       "memory usage: 98.5+ KB\n",
-      "None\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "new_whale    2448\n",
       "w_23a388d      19\n",
       "w_9c506f6      16\n",
       "w_9b5109b      14\n",
-      "w_0369a5c      13\n",
-      "w_88e4537      13\n",
       "w_778e474      13\n",
+      "w_88e4537      13\n",
+      "w_0369a5c      13\n",
       "w_700ebb4      12\n",
       "w_a9304b9      11\n",
-      "w_2b069ba      10\n",
-      "w_488865e      10\n",
-      "w_fd3e556      10\n",
-      "w_d405854      10\n",
-      "w_1ca9ab1      10\n",
       "w_b9e5911      10\n",
+      "w_3de579a      10\n",
       "w_5a2634c      10\n",
       "w_4bf625b      10\n",
-      "w_3de579a      10\n",
-      "w_581ba42       9\n",
-      "w_0a155b9       9\n",
-      "Name: Id, dtype: int64\n",
+      "w_488865e      10\n",
+      "w_d405854      10\n",
+      "w_1ca9ab1      10\n",
+      "w_2b069ba      10\n",
+      "w_fd3e556      10\n",
+      "w_789c969       9\n",
+      "w_d72771c       9\n",
+      "Name: Id, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df['Id'].value_counts().head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "True     1544\n",
       "False     738\n",
       "Name: Id, dtype: int64\n"
@@ -201,20 +356,15 @@
     }
    ],
    "source": [
-    "print(train_df.shape)\n",
-    "print(train_df.head())\n",
-    "print(train_df.describe())\n",
-    "print(train_df.info())\n",
-    "print(train_df['Id'].value_counts().head(20))\n",
-    "ringer = train_df['Id'].value_counts() == 1\n",
-    "print(ringer.value_counts())"
+    "class_with_count_1 = train_df['Id'].value_counts() == 1\n",
+    "print(class_with_count_1.value_counts())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the 6300 samples being used, they belong to 2282 classes/Ids.'New whale' class has the most samples belonging to the class at 2448, far outnumbering the all the other classes."
+    "With the 6300 samples being used, they belong to 2282 classes/Ids.'New whale' class has the most samples belonging to any class with 2448, far outnumbering all the other classes."
    ]
   },
   {
@@ -585,7 +735,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Results with limited sample size due to computational restrictions. Model overfit immediately (val loss increasing) due to lack of samples that computer could work with. However, achieved low initial validation loss after experimenting with many models, including transfer learning."
+    "Results with limited sample size due to computational restrictions. Model overfit immediately (val loss increasing) due to lack of samples that computer could work with. However, this model achieved lowest initial validation loss after experimenting with many models, including transfer learning."
    ]
   },
   {
