--- a/Capstone Project Two/VGG16_Model_Final.ipynb
+++ b/Capstone Project Two/VGG16_Model_Final.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "import numpy as np\n",
@@ -47,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,25 +62,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_labels = '/Users/asifbala/Desktop/humpback-whale-identification.zip Folder/train.csv'\n",
+    "train_df = pd.read_csv(train_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(25361, 2)\n",
+      "(25361, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "           Image         Id\n",
       "0  0000e88ab.jpg  w_f48451c\n",
       "1  0001f9222.jpg  w_c3d896a\n",
       "2  00029d126.jpg  w_20df2c5\n",
       "3  00050a15a.jpg  new_whale\n",
-      "4  0005c1ef8.jpg  new_whale\n",
+      "4  0005c1ef8.jpg  new_whale\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "                Image         Id\n",
       "count           25361      25361\n",
       "unique          25361       5005\n",
-      "top     be7e15a63.jpg  new_whale\n",
-      "freq                1       9664\n",
+      "top     405410b2e.jpg  new_whale\n",
+      "freq                1       9664\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 25361 entries, 0 to 25360\n",
       "Data columns (total 2 columns):\n",
@@ -96,7 +146,23 @@
       "Id       25361 non-null object\n",
       "dtypes: object(2)\n",
       "memory usage: 396.3+ KB\n",
-      "None\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "new_whale    9664\n",
       "w_23a388d      73\n",
       "w_9b5109b      65\n",
@@ -111,13 +177,29 @@
       "w_d405854      47\n",
       "w_f0fe284      45\n",
       "w_789c969      45\n",
-      "w_778e474      40\n",
-      "w_5e8e218      40\n",
       "w_343f088      40\n",
+      "w_5e8e218      40\n",
+      "w_778e474      40\n",
+      "w_60ce6fc      37\n",
       "w_a9304b9      37\n",
       "w_5a2634c      37\n",
-      "w_60ce6fc      37\n",
-      "Name: Id, dtype: int64\n",
+      "Name: Id, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df['Id'].value_counts().head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "False    2932\n",
       "True     2073\n",
       "Name: Id, dtype: int64\n"
@@ -125,22 +207,15 @@
     }
    ],
    "source": [
-    "train_labels = '/Users/asifbala/Desktop/humpback-whale-identification.zip Folder/train.csv'\n",
-    "train_df = pd.read_csv(train_labels)\n",
-    "print(train_df.shape)\n",
-    "print(train_df.head())\n",
-    "print(train_df.describe())\n",
-    "print(train_df.info())\n",
-    "print(train_df['Id'].value_counts().head(20))\n",
-    "ringer = train_df['Id'].value_counts() == 1\n",
-    "print(ringer.value_counts())"
+    "class_with_count_1 = train_df['Id'].value_counts() == 1\n",
+    "print(class_with_count_1.value_counts())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are 25361 samples/images belonging 5005 classes/Ids.'New whale' class has the most samples belonging to the class at 9664, far outnumbering the all the other classes."
+    "There are 25361 samples/images belonging 5005 classes/Ids.'New whale' class has the most samples belonging to the class at 9664, far outnumbering all the other classes."
    ]
   },
   {
@@ -152,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,25 +236,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6300, 2)\n",
+      "(6300, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "           Image         Id\n",
       "0  0000e88ab.jpg  w_f48451c\n",
       "1  0001f9222.jpg  w_c3d896a\n",
       "2  00029d126.jpg  w_20df2c5\n",
       "3  00050a15a.jpg  new_whale\n",
-      "4  0005c1ef8.jpg  new_whale\n",
+      "4  0005c1ef8.jpg  new_whale\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "                Image         Id\n",
       "count            6300       6300\n",
       "unique           6300       2282\n",
-      "top     1acc3891c.jpg  new_whale\n",
-      "freq                1       2448\n",
+      "top     275f6af9a.jpg  new_whale\n",
+      "freq                1       2448\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 6300 entries, 0 to 6299\n",
       "Data columns (total 2 columns):\n",
@@ -187,28 +310,60 @@
       "Id       6300 non-null object\n",
       "dtypes: object(2)\n",
       "memory usage: 98.5+ KB\n",
-      "None\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "new_whale    2448\n",
       "w_23a388d      19\n",
       "w_9c506f6      16\n",
       "w_9b5109b      14\n",
-      "w_0369a5c      13\n",
       "w_88e4537      13\n",
+      "w_0369a5c      13\n",
       "w_778e474      13\n",
       "w_700ebb4      12\n",
       "w_a9304b9      11\n",
       "w_fd3e556      10\n",
-      "w_b9e5911      10\n",
-      "w_5a2634c      10\n",
-      "w_d405854      10\n",
-      "w_3de579a      10\n",
-      "w_4bf625b      10\n",
       "w_1ca9ab1      10\n",
-      "w_488865e      10\n",
+      "w_3de579a      10\n",
+      "w_b9e5911      10\n",
       "w_2b069ba      10\n",
-      "w_6cda039       9\n",
-      "w_af367c3       9\n",
-      "Name: Id, dtype: int64\n",
+      "w_5a2634c      10\n",
+      "w_488865e      10\n",
+      "w_d405854      10\n",
+      "w_4bf625b      10\n",
+      "w_789c969       9\n",
+      "w_5773c71       9\n",
+      "Name: Id, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df['Id'].value_counts().head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "True     1544\n",
       "False     738\n",
       "Name: Id, dtype: int64\n"
@@ -216,13 +371,15 @@
     }
    ],
    "source": [
-    "print(train_df.shape)\n",
-    "print(train_df.head())\n",
-    "print(train_df.describe())\n",
-    "print(train_df.info())\n",
-    "print(train_df['Id'].value_counts().head(20))\n",
-    "ringer = train_df['Id'].value_counts() == 1\n",
-    "print(ringer.value_counts())"
+    "class_with_count_1 = train_df['Id'].value_counts() == 1\n",
+    "print(class_with_count_1.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the 6300 samples being used, they belong to 2282 classes/Ids.'New whale' class has the most samples belonging to any class with 2448, far outnumbering all the other classes."
    ]
   },
   {
@@ -236,7 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Method to plot whale images along with the label classification number."
+    "Method for Preparing Images to be input into convolutional neural network."
    ]
   },
   {
@@ -581,7 +738,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lowest validation loss occurred at second epoch of 5.4997. This is slightly higher than the validation loss of 5.4830 from the scratch model which proves it did not learn as well."
+    "Lowest validation loss for this model occurred at second epoch of 5.4997. This is slightly higher than the validation loss of 5.4830 from the scratch model which proves it did not learn as well."
    ]
   }
  ],
