--- a/data_wrangling_json/JsonProject-Asif Bala.ipynb
+++ b/data_wrangling_json/JsonProject-Asif Bala.ipynb
@@ -1,8 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "****\n",
+    "## JSON exercise\n",
+    "\n",
+    "Using data in file 'data/world_bank_projects.json' and the techniques demonstrated above,\n",
+    "1. Find the 10 countries with most projects\n",
+    "2. Find the top 10 major project themes (using column 'mjtheme_namecode')\n",
+    "3. In 2. above you will notice that some entries have only the code and the name is missing. Create a dataframe with the missing names filled in."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.) Find the 10 countries with most projects"
+    "Find the 10 countries with most projects"
    ]
   },
   {
@@ -352,34 +365,25 @@
     "w = df.name.value_counts()\n",
     "print(w.head(10))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
