--- a/clustering_project/Clustering_Project.ipynb
+++ b/clustering_project/Clustering_Project.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Customer Segmentation using Clustering\n",
     "***\n",
-    "This mini-project is based on [this blog post](http://blog.yhat.com/posts/customer-segmentation-using-python.html) by yhat. Please feel free to refer to the post for additional information, and solutions."
+    "This mini-project is based on [this blog post](http://blog.yhat.com/posts/customer-segmentation-using-python.html) by yhat."
    ]
   },
   {
